--- a/contracts/package.json
+++ b/contracts/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "ethers": "^6.8.1",
     "mime": "^3.0.0",
-    "nft.storage": "^7.1.1"
+    "nft.storage": "^7.1.1",
+    "solc": "^0.8.23-fixed"
   }
 }
